--- a/SalesManagement/AndroidManifest.xml
+++ b/SalesManagement/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -17,19 +18,23 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.shrikanthavale.salesmanagement.PlayGridActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.shrikanthavale.salesmanagement.CaseStudyDescriptionActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.shrikanthavale.salesmanagement.CaseStudyOptionsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.shrikanthavale.salesmanagement.StartPageActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,11 +43,13 @@
         </activity>
         <activity
             android:name="com.shrikanthavale.salesmanagement.administration.AdministrationActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.shrikanthavale.salesmanagement.OptimalSolutionActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
