changed the package names

--- a/FitnessMantra/AndroidManifest.xml
+++ b/FitnessMantra/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.bodymassindex.MainActivity"
+            android:name="com.shrikanthavale.fitnessmantra.mainactivity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
